Fix build issues and prepare for Render deployment